tests/rosetta/transpiler/Pascal/24-game-solve.error
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/rosetta/transpiler/Pascal/24-game-solve.pas
24-game-solve.pas(4,27) Error: Identifier not found "Expr"
24-game-solve.pas(4,31) Error: Error in type definition
24-game-solve.pas(68,17) Error: Identifier not found "exprEval"
24-game-solve.pas(69,17) Error: Identifier not found "exprEval"
24-game-solve.pas(71,33) Error: Illegal qualifier
24-game-solve.pas(71,50) Error: Illegal qualifier
24-game-solve.pas(71,71) Error: Illegal qualifier
24-game-solve.pas(71,90) Error: Illegal qualifier
24-game-solve.pas(71,107) Error: Illegal qualifier
24-game-solve.pas(71,126) Error: Illegal qualifier
24-game-solve.pas(74,33) Error: Illegal qualifier
24-game-solve.pas(74,50) Error: Illegal qualifier
24-game-solve.pas(74,71) Error: Illegal qualifier
24-game-solve.pas(74,90) Error: Illegal qualifier
24-game-solve.pas(74,107) Error: Illegal qualifier
24-game-solve.pas(74,126) Error: Illegal qualifier
24-game-solve.pas(77,32) Error: Illegal qualifier
24-game-solve.pas(77,49) Error: Illegal qualifier
24-game-solve.pas(77,65) Error: Illegal qualifier
24-game-solve.pas(77,84) Error: Illegal qualifier
24-game-solve.pas(79,32) Error: Illegal qualifier
24-game-solve.pas(79,49) Error: Illegal qualifier
24-game-solve.pas(79,67) Error: Illegal qualifier
24-game-solve.pas(79,86) Error: Illegal qualifier
24-game-solve.pas(83,19) Error: Identifier not found "exprString"
24-game-solve.pas(84,19) Error: Identifier not found "exprString"
24-game-solve.pas(99,15) Error: Operator is not overloaded: "Char" + "LongInt"
24-game-solve.pas(103,8) Error: Identifier not found "makeNum"
24-game-solve.pas(107,8) Error: Generics without specialization cannot be used as a type for a variable
24-game-solve.pas(107,19) Error: Identifier not found "Num"
24-game-solve.pas(107,23) Error: Identifier not found "v"
24-game-solve.pas(107,27) Error: Identifier not found "v"
24-game-solve.pas(107,42) Error: Identifier not found "l"
24-game-solve.pas(107,45) Error: Identifier not found "r"
24-game-solve.pas(111,8) Error: Generics without specialization cannot be used as a type for a variable
24-game-solve.pas(111,19) Error: Identifier not found "Num"
24-game-solve.pas(111,23) Error: Identifier not found "v"
24-game-solve.pas(111,36) Error: Identifier not found "v"
24-game-solve.pas(111,58) Error: Identifier not found "l"
24-game-solve.pas(111,61) Error: Identifier not found "r"
24-game-solve.pas(116,28) Error: Incompatible type for arg no. 1: Got "<erroneous type>", expected "Expr"
24-game-solve.pas(118,27) Error: Incompatible type for arg no. 1: Got "<erroneous type>", expected "Expr"
24-game-solve.pas(131,49) Error: Incompatible types: got "{Array Of Const/Constant Open} Array of <erroneous type>" expected "{Dynamic} Array Of Expr"
24-game-solve.pas(137,17) Error: Identifier not found "makeBin"
24-game-solve.pas(139,17) Error: Identifier not found "makeBin"
24-game-solve.pas(140,43) Error: Incompatible types: got "{Array Of Const/Constant Open} Array of LongInt" expected "{Dynamic} Array Of Expr"
24-game-solve.pas(140,32) Error: Incompatible types: got "LongInt" expected "Expr"
24-game-solve.pas(140,44) Error: Incompatible type for arg no. 1: Got "{Dynamic} Array Of Expr", expected "ExprArray"
24-game-solve.pas(144,17) Error: Identifier not found "makeBin"
24-game-solve.pas(145,43) Error: Incompatible types: got "{Array Of Const/Constant Open} Array of LongInt" expected "{Dynamic} Array Of Expr"
24-game-solve.pas(145,43) Fatal: There were 50 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
